<resources>
    <string name="app_name">Simple Room</string>
    <string name="team">Team</string>
    <string name="year">Year</string>
    <string name="website">Website</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="done">DONE</string>
    <string name="add">ADD</string>
</resources>
